[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["kassiebradshaw <kassie.r.bradshaw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.16"
matplotlib = "^3.4.2"
pandas = "^1.3.0"
seaborn = "^0.11.1"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
